--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
     <p>I work as a backend Java/Kotlin developer at <a target="_blank" href="https://www.tinkoff.ru/">Tinkoff Bank</a>, developing distributed infrastructure services.</p>
 
-    <p>You can contact me via <a target="_blank" href="https://t.me/VolkovTech">telegram</a> or <a target="_blank" href="mailto:me@volkov.tech">andrey@volkov.tech</a>.</p>
+    <p>You can contact me via
+        <a target="_blank" href="https://www.linkedin.com/in/VolkovTech">LinkedIn</a>,
+        <a target="_blank" href="https://www.facebook.com/VolkovTech">Facebook</a>,
+        <a target="_blank" href="https://t.me/VolkovTech">Telegram</a> or
+        <a target="_blank" href="mailto:me@volkov.tech">andrey@volkov.tech</a>.
+    </p>
 
     <p>The resume is available <a target="_blank" href="./cv_andrey_volkov.pdf">here</a> or on <a target="_blank" href="https://github.com/VolkovTech">github</a>.</p>
 </div>
