--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/87329836" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JVDLS94C4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0JVDLS94C4');
+    </script>
 </head>
 <body>
 <div class="wrapper">
