--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p class="hello-world"><b>Hello world!</b></p>
     <p>My name is <strong>Andrey Volkov</strong> and I'm a software engineer.</p>
 
-    <p>I work as a backend Java/Kotlin developer at <a target="_blank" href="https://www.tinkoff.ru/">Tinkoff Bank</a>, developing distributed infrastructure services.</p>
+    <p>I work as a backend Java/Kotlin developer at <a target="_blank" href="https://www.tinkoff.ru/">Tinkoff Bank</a>, developing distributed microservices.</p>
 
     <p>You can contact me via
         <a target="_blank" href="https://www.linkedin.com/in/VolkovTech">LinkedIn</a>,
